--- a/pom.xml
+++ b/pom.xml
@@ -117,5 +117,16 @@
             <version>3.1.0</version>
         </dependency>
 
+        <dependency>
+			<groupId>org.hibernate.validator</groupId>
+			<artifactId>hibernate-validator</artifactId>
+			<version>8.0.1.Final</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.glassfish</groupId>
+			<artifactId>jakarta.el</artifactId>
+			<version>4.0.2</version>
+		</dependency>
     </dependencies>
 </project>
